# 21_school_Lemin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  author  main.py  ret  stest.map  support.py  test  test0  test1  test1.map  test2  test3.map  test4  test5.map  test_p  test_p.sol
includes/: lemin.h
maps/: test.map
python/: Untitled.ui  buttons.py  grafix.py  install_py_sh  main.c  main.py  solution  solution2.sol  support.py  test
sources/: ft_add_tmp_to_data.c  ft_ants_choose_ways.c  ft_ants_mooving.c  ft_change_cross_ways.c  ft_check_correct_room.c  ft_check_flags.c  ft_count_symbols.c  ft_create_graph.c  ft_create_n_open_file.c  ft_create_new_track.c  ft_decision_to_countinue.c  ft_error_n_exit.c  ft_find_one_step_solution.c  ft_find_paths.c  ft_free_data.c  ft_free_lemin.c  ft_free_room.c  ft_free_tracks.c  ft_get_data.c  ft_get_last_data_node.c  ft_init_n_add_print.c  ft_is_link.c  ft_lemin_init.c  ft_parse_ants.c  ft_parse_data.c  ft_parse_links.c  ft_parse_rooms.c  ft_print_matrix.c  ft_print_steps.c  ft_run_ants_run.c  ft_run_visual.c  ft_set_levels.c  ft_sort_tracks.c  ft_write_path.c  ft_write_usage_n_exit.c  ft_you_were_warned.c  main.c
